--- a/template/pom.xml
+++ b/template/pom.xml
@@ -140,6 +140,18 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>{%- if params.springBoot2 %}2.7.15{% else %}3.1.3{% endif %}</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.4</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit4</artifactId>
+                        <version>3.5.4</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 
